k3s/argocd-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-nodeport
  namespace: argocd
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    nodePort: 32080
    name: http
  selector:
    app.kubernetes.io/name: argocd-server
